--- a/templates/baselib.html
+++ b/templates/baselib.html
@@ -42,6 +42,7 @@
             display: flex;
             align-items: center;
             height: 100%;
+            margin-right: 10px;
         }
         .navbar .nav-link.active,
         .navbar .nav-link:hover {
