admin update again

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -133,9 +133,11 @@ button:hover {
     <br>
     <br>
     <div class="button-container">
-        <a style="text-decoration: none; padding: 50px;" href="{{ contacts_url }}" class="button">SUBMISSIONS</a>
-        <a style="text-decoration: none; padding: 50px;"  href="{{ bookstore_management_url }}" class="button">BOOKSTORE MANAGEMENT</a>
-        <a style="text-decoration: none; padding: 50px;" href="{{ book_loanv2_url }}" class="button">LIBRARY MANAGEMENT</a>
+        <a style="text-decoration: none; padding: 35px;" href="{{ contacts_url }}" class="button">SUBMISSIONS</a>
+        <a style="text-decoration: none; padding: 35px;"  href="{{ bookstore_management_url }}" class="button">BOOKSTORE MANAGEMENT</a>
+        <a style="text-decoration: none; padding: 35px;" href="{{ book_loanv2_url }}" class="button">LIBRARY MANAGEMENT</a>
+        <a style="text-decoration: none; padding: 35px;" href="{{ admin_events_url }}" class="button">EVENTS MANAGEMENT</a>
+        <a style="text-decoration: none; padding: 35px;" href="{{ admin_audiobooks_url }}" class="button">AUDIOBOOKS MANAGEMENT</a>
     </div>
 {% endif %}
 </body>
